VirtualService/no-gateways/005-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-005
spec:
  gateways:
  - total-gateway
  hosts:
  - "balanced"
  http:
  - route:
    - destination:
        host: balanced
        port:
          number: 9090
