VirtualService/no-gateways/virtualservice-002.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-002
spec:
  hosts:
  - "balanced"
  http:
  - route:
    - destination:
        host: balanced
        port:
          number: 9090
