VirtualService/no-gateways/virtualservice-003.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-003
spec:
  gateways:
  - mesh
  hosts:
  - "balanced"
  http:
  - route:
    - destination:
        host: balanced
        port:
          number: 9090
